service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Tasky
spec:
  selector:
    app: Tasky
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
